feat: add logic for start page, change images

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="wrapper"></div>
+
   <script type="text/javascript" src="./apps/colors.js"></script>
   <script type="text/javascript" src="./apps/logic.js"></script>
   <script type="text/javascript" src="./apps/menu.js"></script>
