--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
   <link rel="stylesheet" href="amedia.css">
 </head>
 <body>
-  <div class="wrapper"></div>
+  <div class="wrapper">
+    <div class="menu_wrapper">
+      <div class="menu_images">
+        <img src="assets/img/menu/puzzle_menu.png" id=Ipuzzle alt="puzzle" class="menu_image">
+        <img src="assets/img/menu/shapes_menu.png" id=Ishapes alt="shapes" class="menu_image">
+        <img src="assets/img/menu/colors_menu.png" id=Icolors alt="colors" class="menu_image">
+        <img src="assets/img/menu/wilddomestic_menu.png" id=Ilogic alt="logic" class="menu_image">
+      </div>
+
+    </div>
+
+
+  </div>
 
   <script type="text/javascript" src="./apps/colors.js"></script>
   <script type="text/javascript" src="./apps/logic.js"></script>
