feat: create colors game page

--- a/index.html
+++ b/index.html
@@ -11,27 +11,13 @@
 <body>
   <div class="wrapper">
 
-    <div class="colors_game_wrapper">
-      <div class="colors_drag_images">
-        <img src="assets/img/colors/redcar.png" alt="" class="drag_image" id=img2>
-        <img src="assets/img/colors/yellowcar.png" alt="" class="drag_image" id=img3>
-        <img src="assets/img/colors/bluecar.png" alt="" class="drag_image" id=img1>
-      </div>
-      <div class="colors_drop_images">
-        <img src="assets/img/colors/bluebox.png" alt="" class="drop_image" id=shad1>
-        <img src="assets/img/colors/redbox.png" alt="" class="drop_image" id=shad2>
-        <img src="assets/img/colors/yellowbox.png" alt="" class="drop_image" id=shad3>
-      </div>
-    </div>
-
-
   </div>
 
-  <script type="text/javascript" src="./apps/colors.js"></script>
-  <script type="text/javascript" src="./apps/logic.js"></script>
-  <script type="text/javascript" src="./apps/menu.js"></script>
-  <script type="text/javascript" src="./apps/puzzle.js"></script>
   <script type="text/javascript" src="./apps/script.js"></script>
+  <script type="text/javascript" src="./apps/menu.js"></script>
+  <script async type="text/javascript" src="./apps/colors.js"></script>
   <script type="text/javascript" src="./apps/shapes.js"></script>
+  <script type="text/javascript" src="./apps/logic.js"></script>
+  <script type="text/javascript" src="./apps/puzzle.js"></script>
 </body>
 </html>
