--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Play and learn</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="amedia.css">
+  <script defer type="text/javascript" src="./apps/colors.js"></script>
   <script type="text/javascript" src="./apps/script.js"></script>
   <script type="text/javascript" src="./apps/menu.js"></script>
-  <script type="text/javascript" src="./apps/colors.js"></script>
   <script type="text/javascript" src="./apps/shapes.js"></script>
   <script type="text/javascript" src="./apps/logic.js"></script>
   <script type="text/javascript" src="./apps/puzzle.js"></script>
