--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Play and learn</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="amedia.css">
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/amedia.css">
   <script defer type="text/javascript" src="./apps/colors.js"></script>
   <script type="text/javascript" src="./apps/script.js"></script>
   <script type="text/javascript" src="./apps/menu.js"></script>
