feat: start logic game

--- a/index.html
+++ b/index.html
@@ -16,6 +16,106 @@
 </head>
 <body>
   <div class="wrapper">
+    <div class="logic_game_wrapper">
+      <h1 class="logic_title">Memory game</h1>
+      <div class="logic_container">
+        <div class="cards_container">
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/blue.png">
+            <img class="logic_image" src="assets/img/logic/cat.png">
+          </div>
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/blue.png">
+            <img class="logic_image" src="assets/img/logic/cat.png">
+          </div>
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/gasoline.png">
+            <img class="logic_image" src="assets/img/logic/zebra.png">
+          </div>
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/gasoline.png">
+            <img class="logic_image" src="assets/img/logic/zebra.png">
+          </div>
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/blue.png">
+            <img class="logic_image" src="assets/img/logic/lamb.png">
+          </div>
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/blue.png">
+            <img class="logic_image" src="assets/img/logic/lamb.png">
+          </div>
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/pink.png">
+            <img class="logic_image" src="assets/img/logic/croco.png">
+          </div>
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/pink.png">
+            <img class="logic_image" src="assets/img/logic/croco.png">
+          </div>
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/yellow.png">
+            <img class="logic_image" src="assets/img/logic/dog.png">
+          </div>
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/yellow.png">
+            <img class="logic_image" src="assets/img/logic/dog.png">
+          </div>
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/gasoline.png">
+            <img class="logic_image" src="assets/img/logic/elef.png">
+          </div>
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/gasoline.png">
+            <img class="logic_image" src="assets/img/logic/elef.png">
+          </div>
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/pink.png">
+            <img class="logic_image" src="assets/img/logic/girrafe.png">
+          </div>
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/pink.png">
+            <img class="logic_image" src="assets/img/logic/girrafe.png">
+          </div>
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/yellow.png">
+            <img class="logic_image" src="assets/img/logic/lion.png">
+          </div>
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/yellow.png">
+            <img class="logic_image" src="assets/img/logic/lion.png">
+          </div><div class="card">
+            <img class="logic_image" src="assets/img/bubbles/gasoline.png">
+            <img class="logic_image" src="assets/img/logic/panda.png">
+          </div>
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/gasoline.png">
+            <img class="logic_image" src="assets/img/logic/panda.png">
+          </div><div class="card">
+            <img class="logic_image" src="assets/img/bubbles/blue.png">
+            <img class="logic_image" src="assets/img/logic/pig.png">
+          </div>
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/blue.png">
+            <img class="logic_image" src="assets/img/logic/pig.png">
+          </div><div class="card">
+            <img class="logic_image" src="assets/img/bubbles/pink.png">
+            <img class="logic_image" src="assets/img/logic/squirrel.png">
+          </div>
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/pink.png">
+            <img class="logic_image" src="assets/img/logic/squirrel.png">
+          </div><div class="card">
+            <img class="logic_image" src="assets/img/bubbles/yellow.png">
+            <img class="logic_image" src="assets/img/logic/turkey.png">
+          </div>
+          <div class="card">
+            <img class="logic_image" src="assets/img/bubbles/yellow.png">
+            <img class="logic_image" src="assets/img/logic/turkey.png">
+          </div>
+        </div>
+      </div>
+
+    </div>
 
   </div>
 
