feat: change html file

--- a/index.html
+++ b/index.html
@@ -21,96 +21,149 @@
       <div class="logic_container">
         <div class="cards_container">
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/blue.png">
-            <img class="logic_image" src="assets/img/logic/cat.png">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image animal" src="assets/img/logic/cat.png">
+            </div>
           </div>
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/blue.png">
-            <img class="logic_image" src="assets/img/logic/cat.png">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image animal" src="assets/img/logic/cat.png">
+            </div>
           </div>
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/gasoline.png">
-            <img class="logic_image" src="assets/img/logic/zebra.png">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
+              <img class="logic_image animal" src="assets/img/logic/zebra.png">
+            </div>
           </div>
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/gasoline.png">
-            <img class="logic_image" src="assets/img/logic/zebra.png">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
+              <img class="logic_image animal" src="assets/img/logic/zebra.png">
+            </div>
           </div>
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/blue.png">
-            <img class="logic_image" src="assets/img/logic/lamb.png">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image animal" src="assets/img/logic/lamb.png">
+            </div>
           </div>
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/blue.png">
-            <img class="logic_image" src="assets/img/logic/lamb.png">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image animal" src="assets/img/logic/lamb.png">
+            </div>
           </div>
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/pink.png">
-            <img class="logic_image" src="assets/img/logic/croco.png">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
+              <img class="logic_image animal" src="assets/img/logic/croco.png">
+            </div>
           </div>
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/pink.png">
-            <img class="logic_image" src="assets/img/logic/croco.png">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
+              <img class="logic_image animal" src="assets/img/logic/croco.png">
+            </div>
           </div>
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/yellow.png">
-            <img class="logic_image" src="assets/img/logic/dog.png">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image animal" src="assets/img/logic/dog.png">
+            </div>
           </div>
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/yellow.png">
-            <img class="logic_image" src="assets/img/logic/dog.png">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image animal" src="assets/img/logic/dog.png">
+            </div>
           </div>
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/gasoline.png">
-            <img class="logic_image" src="assets/img/logic/elef.png">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
+              <img class="logic_image animal" src="assets/img/logic/elef.png">
+            </div>
           </div>
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/gasoline.png">
-            <img class="logic_image" src="assets/img/logic/elef.png">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
+              <img class="logic_image animal" src="assets/img/logic/elef.png">
+            </div>
           </div>
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/pink.png">
-            <img class="logic_image" src="assets/img/logic/girrafe.png">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image animal" src="assets/img/logic/lion.png">
+            </div>
           </div>
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/pink.png">
-            <img class="logic_image" src="assets/img/logic/girrafe.png">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image animal" src="assets/img/logic/lion.png">
+            </div>
           </div>
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/yellow.png">
-            <img class="logic_image" src="assets/img/logic/lion.png">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
+              <img class="logic_image animal" src="assets/img/logic/panda.png">
+            </div>
           </div>
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/yellow.png">
-            <img class="logic_image" src="assets/img/logic/lion.png">
-          </div><div class="card">
-            <img class="logic_image" src="assets/img/bubbles/gasoline.png">
-            <img class="logic_image" src="assets/img/logic/panda.png">
+            <div class="card_front">
+
+            </div>
+            <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
+            <img class="logic_image animal" src="assets/img/logic/panda.png">
           </div>
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/gasoline.png">
-            <img class="logic_image" src="assets/img/logic/panda.png">
-          </div><div class="card">
-            <img class="logic_image" src="assets/img/bubbles/blue.png">
-            <img class="logic_image" src="assets/img/logic/pig.png">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image animal" src="assets/img/logic/pig.png">
+            </div>
           </div>
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/blue.png">
-            <img class="logic_image" src="assets/img/logic/pig.png">
-          </div><div class="card">
-            <img class="logic_image" src="assets/img/bubbles/pink.png">
-            <img class="logic_image" src="assets/img/logic/squirrel.png">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image animal" src="assets/img/logic/pig.png">
+            </div>
           </div>
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/pink.png">
-            <img class="logic_image" src="assets/img/logic/squirrel.png">
-          </div><div class="card">
-            <img class="logic_image" src="assets/img/bubbles/yellow.png">
-            <img class="logic_image" src="assets/img/logic/turkey.png">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
+              <img class="logic_image animal" src="assets/img/logic/squirrel.png">
+            </div>
           </div>
           <div class="card">
-            <img class="logic_image" src="assets/img/bubbles/yellow.png">
-            <img class="logic_image" src="assets/img/logic/turkey.png">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
+              <img class="logic_image animal" src="assets/img/logic/squirrel.png">
+            </div>
+          </div>
+          <div class="card">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image animal" src="assets/img/logic/turkey.png">
+            </div>
+          </div>
+          <div class="card">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image animal" src="assets/img/logic/turkey.png">
+            </div>
+          </div>
+          <div class="card">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
+              <img class="logic_image animal" src="assets/img/logic/horse.png">
+            </div>
+          </div>
+          <div class="card">
+            <div class="card_front">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
+              <img class="logic_image animal" src="assets/img/logic/horse.png">
+            </div>
           </div>
         </div>
       </div>
