feat: add shadows

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <img class="back_image" src="assets/img/bubbles/coloredbig.png">
             </div>
             <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
               <img class="logic_image animal" src="assets/img/logic/cat.png">
             </div>
           </div>
@@ -34,7 +34,7 @@
               <img class="back_image" src="assets/img/bubbles/coloredbig.png">
             </div>
             <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
               <img class="logic_image animal" src="assets/img/logic/cat.png">
             </div>
           </div>
@@ -61,7 +61,7 @@
               <img class="back_image" src="assets/img/bubbles/coloredbig.png">
             </div>
             <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
               <img class="logic_image animal" src="assets/img/logic/lamb.png">
             </div>
           </div>
@@ -70,7 +70,7 @@
               <img class="back_image" src="assets/img/bubbles/coloredbig.png">
             </div>
             <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
               <img class="logic_image animal" src="assets/img/logic/lamb.png">
             </div>
           </div>
@@ -97,7 +97,7 @@
               <img class="back_image" src="assets/img/bubbles/coloredbig.png">
             </div>
             <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
               <img class="logic_image animal" src="assets/img/logic/dog.png">
             </div>
           </div>
@@ -106,7 +106,7 @@
               <img class="back_image" src="assets/img/bubbles/coloredbig.png">
             </div>
             <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
               <img class="logic_image animal" src="assets/img/logic/dog.png">
             </div>
           </div>
@@ -133,7 +133,7 @@
               <img class="back_image" src="assets/img/bubbles/coloredbig.png">
             </div>
             <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
               <img class="logic_image animal" src="assets/img/logic/lion.png">
             </div>
           </div>
@@ -142,7 +142,7 @@
               <img class="back_image" src="assets/img/bubbles/coloredbig.png">
             </div>
             <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
               <img class="logic_image animal" src="assets/img/logic/lion.png">
             </div>
           </div>
@@ -169,7 +169,7 @@
               <img class="back_image" src="assets/img/bubbles/coloredbig.png">
             </div>
             <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
               <img class="logic_image animal" src="assets/img/logic/pig.png">
             </div>
           </div>
@@ -178,7 +178,7 @@
               <img class="back_image" src="assets/img/bubbles/coloredbig.png">
             </div>
             <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
               <img class="logic_image animal" src="assets/img/logic/pig.png">
             </div>
           </div>
@@ -205,7 +205,7 @@
               <img class="back_image" src="assets/img/bubbles/coloredbig.png">
             </div>
             <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
               <img class="logic_image animal" src="assets/img/logic/turkey.png">
             </div>
           </div>
@@ -214,7 +214,7 @@
               <img class="back_image" src="assets/img/bubbles/coloredbig.png">
             </div>
             <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/yellow.png">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
               <img class="logic_image animal" src="assets/img/logic/turkey.png">
             </div>
           </div>
