--- a/index.html
+++ b/index.html
@@ -236,6 +236,42 @@
               <img class="logic_image animal" src="assets/img/logic/horse.png">
             </div>
           </div>
+          <div class="card">
+            <div class="card_back card_face">
+              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
+            </div>
+            <div class="card_front card_face">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
+              <img class="logic_image animal" src="assets/img/logic/cow.png">
+            </div>
+          </div>
+          <div class="card">
+            <div class="card_back card_face">
+              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
+            </div>
+            <div class="card_front card_face">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
+              <img class="logic_image animal" src="assets/img/logic/cow.png">
+            </div>
+          </div>
+          <div class="card">
+            <div class="card_back card_face">
+              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
+            </div>
+            <div class="card_front card_face">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
+              <img class="logic_image animal" src="assets/img/logic/girrafe.png">
+            </div>
+          </div>
+          <div class="card">
+            <div class="card_back card_face">
+              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
+            </div>
+            <div class="card_front card_face">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
+              <img class="logic_image animal" src="assets/img/logic/girrafe.png">
+            </div>
+          </div>
         </div>
       </div>
 
