feat: add overlay, fonts, animation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
   <div class="wrapper">
+    <div class="overlay1">excellent!!!</div>
     <div class="logic_game_wrapper">
       <h1 class="logic_title">Memory game</h1>
       <div class="logic_container">
