feat: add animation

--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
   <title>Play and learn</title>
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/amedia.css">
-  <script defer type="text/javascript" src="./apps/colors.js"></script>
-  <script type="text/javascript" src="./apps/script.js"></script>
-  <script type="text/javascript" src="./apps/menu.js"></script>
-  <script type="text/javascript" src="./apps/shapes.js"></script>
-  <script type="text/javascript" src="./apps/logic.js"></script>
-  <script type="text/javascript" src="./apps/puzzle.js"></script>
+  <script async type="text/javascript" src="./apps/script.js"></script>
+  <script async type="text/javascript" src="./apps/menu.js"></script>
+  <script async type="text/javascript" src="./apps/colors.js"></script>
+  <script async type="text/javascript" src="./apps/shapes.js"></script>
+  <script async type="text/javascript" src="./apps/logic.js"></script>
+  <!-- <script type="text/javascript" src="./apps/puzzle.js"></script> -->
 </head>
 <body>
   <div class="wrapper">
-    <div class="overlay1">excellent!!!</div>
+    <div class="overlay1">
+      <span class="overlay_text">
+        excellent!!!
+      </span>
+    </div>
     <div class="logic_game_wrapper">
       <h1 class="logic_title">Memory game</h1>
       <div class="logic_container">
