feat: add balloon tap function

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <div class="overlay1">
+    <!-- <div class="overlay1 visible">
       <span class="overlay_text">
         excellent!!!
       </span>
@@ -280,7 +280,7 @@
         </div>
       </div>
 
-    </div>
+    </div> -->
 
   </div>
 
