--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </span>
     </div>
     <div class="logic_game_wrapper">
-      <h1 class="logic_title">Memory game</h1>
+      <!-- <h1 class="logic_title">Memory game</h1> -->
       <div class="logic_container">
         <div class="cards_container">
           <div class="card">
@@ -275,6 +275,24 @@
             <div class="card_front card_face">
               <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
               <img class="logic_image animal" src="assets/img/logic/girrafe.png">
+            </div>
+          </div>
+          <div class="card">
+            <div class="card_back card_face">
+              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
+            </div>
+            <div class="card_front card_face">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
+              <img class="logic_image animal" src="assets/img/logic/monkey.png">
+            </div>
+          </div>
+          <div class="card">
+            <div class="card_back card_face">
+              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
+            </div>
+            <div class="card_front card_face">
+              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
+              <img class="logic_image animal" src="assets/img/logic/monkey.png">
             </div>
           </div>
         </div>
