feat: add module

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   <title>Play and learn</title>
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/amedia.css">
+  <script defer type="module" src="./apps/AudioController.js"></script>
   <script async type="text/javascript" src="./apps/script.js"></script>
   <script async type="text/javascript" src="./apps/menu.js"></script>
   <script async type="text/javascript" src="./apps/colors.js"></script>
   <script async type="text/javascript" src="./apps/shapes.js"></script>
-  <script async type="text/javascript" src="./apps/logic.js"></script>
+  <script async type="module" src="./apps/logic.js"></script>
   <!-- <script type="text/javascript" src="./apps/puzzle.js"></script> -->
 </head>
 <body>
