--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
   <title>Play and learn</title>
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/amedia.css">
+  <script defer type="module" src="./apps/SPA.js"></script>
   <script defer type="module" src="./apps/AudioController.js"></script>
-  <script async type="text/javascript" src="./apps/script.js"></script>
-  <script async type="text/javascript" src="./apps/menu.js"></script>
-  <script async type="text/javascript" src="./apps/colors.js"></script>
-  <script async type="text/javascript" src="./apps/shapes.js"></script>
+  <script defer type="module" src="./apps/script.js"></script>
+  <script defer type="module" src="./apps/menu.js"></script>
+  <script async type="module" src="./apps/colors.js"></script>
+  <script async type="module" src="./apps/shapes.js"></script>
   <script async type="module" src="./apps/logic.js"></script>
-  <!-- <script type="text/javascript" src="./apps/puzzle.js"></script> -->
 </head>
 <body>
   <div class="wrapper">
-    <div class="overlay1">
+    <!-- <div class="overlay1">
       <span class="overlay_text">
         excellent!!!
       </span>
     </div>
     <div class="logic_game_wrapper">
-      <!-- <h1 class="logic_title">Memory game</h1> -->
+
       <div class="logic_container">
         <div class="cards_container">
           <div class="card">
@@ -299,7 +299,7 @@
         </div>
       </div>
 
-    </div>
+    </div> -->
 
   </div>
 
