feat: correct overlay logic

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <!-- <div class="overlay1">
+    <!-- <div class="overlay">
       <span class="overlay_text">
         excellent!!!
       </span>
