--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="./styles/amedia.css">
   <script defer type="module" src="./apps/SPA.js"></script>
   <script defer type="module" src="./apps/AudioController.js"></script>
+  <script defer type="module" src="./apps/Controlls.js"></script>
+  <script defer type="module" src="./apps/Overlay.js"></script>
   <script defer type="module" src="./apps/script.js"></script>
   <script defer type="module" src="./apps/menu.js"></script>
   <script async type="module" src="./apps/colors.js"></script>
@@ -17,7 +19,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <!-- <div class="overlay">
+    <div class="overlay">
       <span class="overlay_text">
         excellent!!!
       </span>
@@ -299,7 +301,7 @@
         </div>
       </div>
 
-    </div> -->
+    </div>
 
   </div>
 
