--- a/index.html
+++ b/index.html
@@ -18,292 +18,6 @@
   <script async type="module" src="./apps/logic.js"></script>
 </head>
 <body>
-  <div class="wrapper">
-    <div class="overlay">
-      <span class="overlay_text">
-        excellent!!!
-      </span>
-    </div>
-    <div class="logic_game_wrapper">
-
-      <div class="logic_container">
-        <div class="cards_container">
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/cat.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/cat.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/zebra.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/zebra.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/lamb.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/lamb.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/croco.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/croco.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/dog.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/dog.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/elef.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/elef.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/lion.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/lion.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/panda.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/panda.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/pig.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/pig.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/squirrel.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/squirrel.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/turkey.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/turkey.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/horse.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/horse.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/cow.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/cow.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/girrafe.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/girrafe.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/monkey.png">
-            </div>
-          </div>
-          <div class="card">
-            <div class="card_back card_face">
-              <img class="back_image" src="assets/img/bubbles/coloredbig.png">
-            </div>
-            <div class="card_front card_face">
-              <img class="logic_image bubble" src="assets/img/bubbles/pink.png">
-              <img class="logic_image animal" src="assets/img/logic/monkey.png">
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-  </div>
-
+  <div class="wrapper"></div>
 </body>
 </html>
