feat: add stages to logic game, add bgMusic, correct audiocontroller methods

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <title>Play and learn</title>
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/amedia.css">
-  <script defer type="module" src="./apps/SPA.js"></script>
-  <!-- <script defer type="module" src="./apps/AudioController.js"></script> -->
+  <!-- <script defer type="module" src="./apps/SPA.js"></script> -->
+  <script defer type="module" src="./apps/AudioController.js"></script>
   <!-- <script defer type="module" src="./apps/Controlls.js"></script> -->
   <!-- <script defer type="module" src="./apps/Overlay.js"></script> -->
   <script defer type="module" src="./apps/script.js"></script>
   <script defer type="module" src="./apps/menu.js"></script>
-  <script async type="module" src="./apps/colors.js"></script>
-  <script async type="module" src="./apps/shapes.js"></script>
-  <script async type="module" src="./apps/logic.js"></script>
+  <!-- <script async type="module" src="./apps/colors.js"></script> -->
+  <!-- <script async type="module" src="./apps/shapes.js"></script> -->
+  <!-- <script async type="module" src="./apps/logic.js"></script> -->
 </head>
 <body>
   <div class="wrapper"></div>
