--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
   <!-- <script defer type="module" src="./apps/Overlay.js"></script> -->
   <script defer type="module" src="./apps/script.js"></script>
   <!-- <script defer type="module" src="./apps/menu.js"></script> -->
-  <!-- <script async type="module" src="./apps/colors.js"></script> -->
-  <!-- <script async type="module" src="./apps/shapes.js"></script> -->
   <!-- <script async type="module" src="./apps/logic.js"></script> -->
+  <script async type="module" src="./apps/logicEasy.js"></script>
+  <script async type="module" src="./apps/logicMedium.js"></script>
+  <script async type="module" src="./apps/logicHard.js"></script>
 </head>
 <body>
   <div class="wrapper"></div>
