--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Play and learn</title>
+  <link rel="shortcut icon" href="./assets/img/icons/favicon.ico">
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/amedia.css">
   <!-- <script defer type="module" src="./apps/SPA.js"></script> -->
