feat: add image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Play and learn</title>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <link rel="preload" href="./assets/img/backgrounds/menubg.png" as='img'>
+  <link rel="preload" href="./assets/img/backgrounds/menubg.png" as='image'>
   <link rel="shortcut icon" href="./assets/img/icons/favicon.ico">
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/amedia.css">
