--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <script defer type="module" src="./apps/script.js"></script>
   <!-- <script defer type="module" src="./apps/menu.js"></script> -->
   <!-- <script async type="module" src="./apps/logic.js"></script> -->
-  <script async type="module" src="./apps/logicHard.js"></script>
+  <!-- <script async type="module" src="./apps/logicHard.js"></script>
   <script async type="module" src="./apps/logicMedium.js"></script>
-  <script async type="module" src="./apps/logicEasy.js"></script>
+  <script async type="module" src="./apps/logicEasy.js"></script> -->
 </head>
 <body>
   <div class="preloader" id="preloader">
