feat: change vibro logic

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="./styles/amedia.css">
   <link rel="stylesheet" href="./styles/preloader.css">
   <script async src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <link rel="preload" href="./assets/img/backgrounds/startbg.png" as='image'>
+  <link rel="preload" href="./assets/img/backgrounds/menubg.png" as='image'>
   <!-- <script defer type="module" src="./apps/SPA.js"></script> -->
   <!-- <script defer type="module" src="./apps/AudioController.js"></script> -->
   <!-- <script defer type="module" src="./apps/Controlls.js"></script> -->
