feat: add script

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/amedia.css">
   <link rel="stylesheet" href="./styles/preloader.css">
-  <script async src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <link rel="preload" href="./assets/img/backgrounds/startbg.png" as='image'>
+  <link rel="preload" href="./assets/img/backgrounds/startbg.jpg" as='image'>
   <link rel="preload" href="./assets/img/backgrounds/menubg.png" as='image'>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <!-- <script defer type="module" src="./apps/SPA.js"></script> -->
   <!-- <script defer type="module" src="./apps/AudioController.js"></script> -->
   <!-- <script defer type="module" src="./apps/Controlls.js"></script> -->
-  <!-- <script defer type="module" src="./apps/Overlay.js"></script> -->
   <script defer type="module" src="./apps/script.js"></script>
+  <script type="module" src="./apps/Overlay.js"></script>
   <!-- <script async type="module" src="./apps/menu.js"></script> -->
   <!-- <script async type="module" src="./apps/logic.js"></script> -->
   <!-- <script async type="module" src="./apps/logicHard.js"></script>
