--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/amedia.css">
   <link rel="stylesheet" href="./styles/preloader.css">
-  <!-- <link rel="preload" href="./assets/img/backgrounds/startbg.png" as='image'>
-  <link rel="preload" href="./assets/img/backgrounds/menubg.png" as='image'> -->
+  <link rel="preload" href="./assets/img/backgrounds/startbg.png" as='image'>
+  <link rel="preload" href="./assets/img/backgrounds/menubg.png" as='image'>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <!-- <script defer type="module" src="./apps/SPA.js"></script> -->
   <!-- <script defer type="module" src="./apps/AudioController.js"></script> -->
