--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="./styles/preloader.css">
   <link rel="preload" href="./assets/img/backgrounds/startbg.png" as='image'>
   <link rel="preload" href="./assets/img/backgrounds/menubg.png" as='image'>
+  <script>
+    screen.orientation.lock('portrait');
+  </script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <!-- <script defer type="module" src="./apps/SPA.js"></script> -->
   <!-- <script defer type="module" src="./apps/AudioController.js"></script> -->
