--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/amedia.css">
   <link rel="stylesheet" href="./styles/preloader.css">
+  <!-- <link rel="stylesheet" href="css/portrait.css" media="all and (orientation:portrait)"/>
+  <link rel="stylesheet" href="css/landscape.css" media="all and (orientation:landscape)"/> -->
   <link rel="preload" href="./assets/img/backgrounds/startbg.png" as='image'>
   <link rel="preload" href="./assets/img/backgrounds/menubg.png" as='image'>
-  <script>
+  <!-- <script>
     screen.orientation.lock('portrait');
-  </script>
+  </script> -->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <!-- <script defer type="module" src="./apps/SPA.js"></script> -->
   <!-- <script defer type="module" src="./apps/AudioController.js"></script> -->
