feat: change preloader func, add percentage

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="./styles/preloader.css">
   <!-- <link rel="stylesheet" href="css/portrait.css" media="all and (orientation:portrait)"/>
   <link rel="stylesheet" href="css/landscape.css" media="all and (orientation:landscape)"/> -->
-  <link rel="preload" href="./assets/img/backgrounds/startbg.png" as='image'>
-  <link rel="preload" href="./assets/img/backgrounds/menubg.png" as='image'>
+  <!-- <link rel="preload" href="./assets/img/backgrounds/startbg.png" as='image'>
+  <link rel="preload" href="./assets/img/backgrounds/menubg.png" as='image'> -->
   <!-- <script>
     screen.orientation.lock('portrait');
   </script> -->
