feat: add image to preload

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/amedia.css">
   <link rel="stylesheet" href="./styles/preloader.css">
+  <link rel="preload" href="./assets/img/backgrounds/startbg.png" as='image'>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script defer type="module" src="./apps/script.js"></script>
 </head>
