feat: add statement to clear interval

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
   <link rel="preload" href="./assets/img/backgrounds/startbg.png" as='image'>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script defer type="module" src="./apps/script.js"></script>
+
+  <!-- <script defer type="module" src="./apps/preloader.js"></script>
+  <script defer type="module" src="./apps/storage.js"></script>
+  <script defer type="module" src="./apps/SPA.js"></script> -->
+  <!-- <script defer type="module" src="./apps/App/AJAXStorage.js"></script>
+  <script defer type="module" src="./apps/App/AudioController.js"></script>
+  <script defer type="module" src="./apps/App/Controlls.js"></script>
+  <script defer type="module" src="./apps/App/Overlay.js"></script>
+  <script defer type="module" src="./apps/menu.js"></script>
+  <script defer type="module" src="./apps/logicMenuPages.js"></script>
+  <script defer type="module" src="./apps/newGames.js"></script> -->
 </head>
 <body>
   <div class="wrapper"></div>
@@ -19,17 +30,3 @@
 </html>
 
 
-<!-- <script defer type="module" src="./apps/SPA.js"></script> -->
-  <!-- <script defer type="module" src="./apps/AudioController.js"></script> -->
-  <!-- <script defer type="module" src="./apps/Controlls.js"></script> -->
-  <!-- <script type="module" src="./apps/App/Overlay.js"></script> -->
-  <!-- <script async type="module" src="./apps/menu.js"></script> -->
-  <!-- <script async type="module" src="./apps/logic.js"></script> -->
-  <!-- <script async type="module" src="./apps/logicHard.js"></script>
-  <script async type="module" src="./apps/logicMedium.js"></script>
-  <script async type="module" src="./apps/logicEasy.js"></script> -->
-  <!-- <link rel="stylesheet" href="css/portrait.css" media="all and (orientation:portrait)"/>
-  <link rel="stylesheet" href="css/landscape.css" media="all and (orientation:landscape)"/> -->
-  <!-- <script>
-    screen.orientation.lock('portrait');
-  </script> -->
