feat: change meta

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.2, maximum-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=0.9, user-scalable=no">
   <title>Memory Game</title>
   <link rel="shortcut icon" href="./assets/img/icons/favicon.ico">
   <link rel="stylesheet" href="./styles/style.css">
